# modelbox

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  NOTICE  README.md  README_en.md  Third_Party_Open_Source_Software_Notice  build_for_android.sh  setup_android_ndk.sh
CMake/: FindACL.cmake  (+23 more)
docs/: CMakeLists.txt  Design.md  Doxyfile.in  Goal.md
docs/assets/: architecture.vsdx  modelbox.vsdx
examples/: CMakeLists.txt
examples/flowunit/: CMakeLists.txt
examples/flowunit/c++/: CMakeLists.txt  example.cc  example.h  example.toml
examples/flowunit/infer/: CMakeLists.txt  example.toml
examples/flowunit/plugin/data_source_parser/: CMakeLists.txt  driver_desc.cc  example.cc  example.h
examples/flowunit/python/: example.py  example.toml
examples/flowunit/yolo/: CMakeLists.txt  example.toml
examples/misc/: modelbox-template-cmd.json.in
examples/plugin/: CMakeLists.txt  example.cc  example.h
examples/project/: CMakeLists.txt
examples/project/base/: CMakeLists.txt  readme.txt
examples/project/car_detection/: desc.toml  setup.sh
examples/project/emotion_detection/: desc.toml  download_emotion_files.sh  setup.sh
examples/project/empty/: desc.toml
examples/project/hello_world/: desc.toml  setup.sh
examples/project/mnist/: desc.toml  setup.sh
examples/project/mnist-mindspore/: desc.toml  setup.sh
examples/project/package/: CMakeLists.txt
examples/project/resize/: desc.toml
examples/project/test/: CMakeLists.txt
examples/service-plugin/: CMakeLists.txt  example.cc  example.h
src/: CMakeLists.txt
src/demo/: CMakeLists.txt
src/demo/car_detection/: CMakeLists.txt
src/demo/emotion_detection/: CMakeLists.txt
src/demo/hello_world/: CMakeLists.txt
src/demo/mnist/: CMakeLists.txt
src/develop/: CMakeLists.txt
src/drivers/: CMakeLists.txt
src/drivers/common/: CMakeLists.txt
src/drivers/devices/: CMakeLists.txt
src/drivers/graph_conf/: CMakeLists.txt
src/drivers/inference_engine/: CMakeLists.txt
src/drivers/virtual/: CMakeLists.txt
src/java/: CMakeLists.txt  pom.xml
src/java/jni/: CMakeLists.txt  jni_native_object.cc  jni_native_object.h  log.cc  log.h  modelbox.cc  modelbox.h  modelbox_jni.cc  scoped_jvm.cc  scoped_jvm.h  throw.cc  throw.h  utils.cc  utils.h
src/libmodelbox/: CMakeLists.txt  config.h.in  libmodelbox.pc.in
src/libmodelbox/base/: CMakeLists.txt
src/libmodelbox/engine/: buffer.cc  buffer_index_info.cc  buffer_list.cc  buffer_type.cc  data_context.cc  error.cc  external_data_map.cc  external_data_simple.cc  flow_stream_io.cc  flowunit.cc  flowunit_balancer.cc  flowunit_data_executor.cc  flowunit_group.cc  flowunit_manager.cc  graph.cc  index_buffer.cc  inner_event.cc  match_buffer.cc  match_stream.cc  node.cc  output_buffer.cc  port.cc  session.cc  session_context.cc  single_node.cc  solution.cc  stream.cc  tensor.cc  tensor_list.cc  type.cc  virtual_node.cc
src/libmodelbox/flow/: flow.cc
src/libmodelbox/profiling/: performance.cc  profiler.cc  statistics.cc  trace.cc
src/modelbox/: CMakeLists.txt
src/modelbox/common/: CMakeLists.txt  command.cc  config.cc  control_msg.cc  flowuint_info.cc  log.cc  utils.cc
src/modelbox/manager/: CMakeLists.txt
src/modelbox/server/: CMakeLists.txt  config.cc  config.h  control-command.cc  control-command.h  control.cc  control.h  http_helper.cc  job.cc  job_manager.cc  js_engine.cc  js_engine.h  main.cc  plugin.cc  server.cc  server.h  server_plugin.cc  server_plugin.h  server_plugin_js.cc  task.cc  task_manager.cc  timer.cc  utils.cc
src/modelbox/serving/: CMakeLists.txt  main.cc  serving.cc  serving.h
src/modelbox/tool/: CMakeLists.txt  driver.cc  driver.h  external_command.cc  external_command.h  flow.cc  flow.h  help.cc  help.h  key.cc  key.h  log.h  main.cc  server_command.cc  server_command.h
src/python/: CMakeLists.txt  MANIFEST.in  setup.py.in
src/python/lib/: log.cc  modelbox.cc
src/python/modelbox/: __init__.py
src/python/test/: __init__.py  test_api_mode.py  test_buffer.py  test_config.py.in  test_configuration.py  test_dynamic_graph.py  test_flow.py  test_log.py  test_model.py  test_modelbox.py  test_session.py  test_solution.py  test_status.py
src/solution/: CMakeLists.txt
src/solution/flowunit/: CMakeLists.txt
src/solution/graphs/: CMakeLists.txt
test/: CMakeLists.txt  test_config.h.in  test_main.cc
test/assets/: ascend_crop_yuv  ascend_padding_yuv  ascend_resize_yuv  rockchip_112x110_bgr  rockchip_160x120_bgr  rockchip_640x480_bgr  rockchip_crop_bgr  rockchip_decoder_test_bgr
test/assets/atc_inference/: 2d_2048_w_stage1_pad0.om  2d_2048_w_stage1_pad0_en.om
test/assets/auth/: auth_info.toml
test/assets/mindspore_inference/: tensor_add.ms  tensor_add_en.mindir  tensor_add_en.ms
test/assets/obs/: obs_download.toml  obs_upload.toml
test/assets/resize_cpu/: virtual_python_test.toml
test/assets/tensorflow_cpu/: virtual_model_test.toml
test/assets/tensorrt/: frozen_model.uff  frozen_model_en.uff  model.onnx  model_en.onnx
test/assets/test_model/: test_dynamic.onnx
test/assets/torch/: pytorch_example.pt  pytorch_example_2.pt  pytorch_example_en.pt
test/assets/video/: rgb_460800_480x320_a.data  rgb_460800_480x320_b.data
test/assets/yolobox/: data_144000_0  data_36000_0
test/drivers/: CMakeLists.txt  driver_flow_test.cc  driver_flow_test.h
test/drivers/common/: mock_cert.cc  mock_cert.h
test/function/: CMakeLists.txt  api_test.cc  demo_test.cc  dynamic_graph_test.cc  solution_test.cc
test/function/car_detection/: CMakeLists.txt  car_flow.cc  car_flow.h  car_flow_test.cc
test/manager/: CMakeLists.txt  manager_test.cc  test_main.cc
test/mock/: CMakeLists.txt
test/mock/drivers/: CMakeLists.txt  mock_driver_ctl.cc  mock_driver_ctl.h
test/mock/flowunit/: CMakeLists.txt
test/mock/minimodelbox/: CMakeLists.txt  mock_server.cc  mock_server.h  mock_tool.cc  mock_tool.h  mockflow.cc  mockflow.h
test/unit/: CMakeLists.txt
test/unit/libmodelbox/: flow_test.cc  solution_test.cc
test/unit/modelbox/: manager_test.cc  server_test.cc  serving_test.cc  utils_test.cc
test/unit/plugin/: task_manger_test.cc
(+1184 files in other folders)
